# S2A-Manager

./: .gitignore  README.md  S2A-Manager.spec  pyproject.toml
.claude/skills/skill-github-release/: SKILL.md
.github/workflows/: release.yml
docs/: bug-关闭达阈值账号未生效.md  github跨平台发布说明.md  uv迁移实现文档.md  账号检测-额度阈值关闭与全部开关-实现文档.md  账号检测模块接口文档.md
pyinstaller_hooks/pre_find_module_path/: hook-tkinter.py
tools/: chatgpt_register_adapter.py  chatgpt_register_gui.py  s2a_manager.py
